--- a/css/media.css
+++ b/css/media.css
@@ -3,286 +3,350 @@
 
 /*================ HEADER ================*/
 @media (max-width: 835px) {
- .menu__btm{
-   z-index: 5;
-   display: block;
-   position: relative;
-   width: 30px;
-   height: 18px;
-   cursor: pointer;
+	.menu__btm{
+	  z-index: 5;
+	  display: block;
+	  position: relative;
+	  width: 30px;
+	  height: 18px;
+	  cursor: pointer;
+	}
+	.menu__btm span,
+	.menu__btm::before,
+	.menu__btm::after{
+	  left: 0;
+	  position: absolute;
+	  height: 10%;
+	  width: 100%;
+	  transition: all 0.3s ease 0s;
+	  background-color: black;
+	}
+	.menu__btm::before,
+	.menu__btm::after{
+	  content: "";
+	}
+	.menu__btm::before {
+	  top: 0;
+	}
+	.menu__btm::after {
+	  bottom: 0;
+	}
+	.menu__btm span{
+	  top: 50%;
+	  transform: scale(1) translate(0px, -50%);
+	}
+	.menu__btm._active span{
+	  transform: scale(0);
+ 
+	}
+	.menu__btm._active::before{
+	  top: 50%;
+	  transform: rotate(-45deg) translate(0px, -50%);
+	}
+	.menu__btm._active::after{
+	  top: 50%;
+	  transform: rotate(45deg) translate(0px, -50%);
+	}
+ 
+	.menu__body{
+	  position: fixed;
+	  top: 0;
+	  left: -130%;
+	  width: 100%;
+	  height: 100%;
+	  background-color: #F0F0F0;
+	  padding: 150px 30px 30px 0;
+	  transition: left 0.3s ease 0s;
+	  overflow: auto;
+	}
+	.menu__body._active{
+	  left: 0;
+	}
+	/*.menu__body::before{*/
+	/*  content: "";*/
+	/*  position: fixed;*/
+	/*  width: 100%;*/
+	/*  top: 0;*/
+	/*  left: 0;*/
+	/*  height: 70px;*/
+	/*  background-color: $white_colorfff;*/
+	/*  z-index: 2;*/
+	/*}*/
+	.menu__list li{
+	  margin: 0 0 30px 0;
+	}
+	.menu__list {
+	  flex-direction: column;
+	  text-align: center;
+	  justify-content: center;
+	}
+	.menu__list li:last-child{
+	  margin-bottom: 0;
+	}
+	.menu__link{
+	  font-size: 26px;
+	}
+	.menu__icon._active{
+	  position: absolute;
+	  bottom: 20px;
+	  left: 41%;
+	}
  }
-  .menu__btm span,
-  .menu__btm::before,
-  .menu__btm::after{
-    left: 0;
-    position: absolute;
-    height: 10%;
-    width: 100%;
-    transition: all 0.3s ease 0s;
-    background-color: black;
-  }
-  .menu__btm::before,
-  .menu__btm::after{
-    content: "";
-  }
-  .menu__btm::before {
-    top: 0;
-  }
-  .menu__btm::after {
-    bottom: 0;
-  }
-  .menu__btm span{
-    top: 50%;
-    transform: scale(1) translate(0px, -50%);
-  }
-    .menu__btm._active span{
-        transform: scale(0);
-
-    }
-    .menu__btm._active::before{
-        top: 50%;
-        transform: rotate(-45deg) translate(0px, -50%);
-    }
-    .menu__btm._active::after{
-        top: 50%;
-        transform: rotate(45deg) translate(0px, -50%);
-    }
-
-  .menu__body{
-    position: fixed;
-    top: 0;
-    left: -130%;
-    width: 100%;
-    height: 100%;
-    background-color: #F0F0F0;
-    padding: 150px 30px 30px 0px;
-    transition: left 0.3s ease 0s;
-    overflow: auto;
-  }
-  .menu__body._active{
-    left: 0;
-  }
-  /*.menu__body::before{*/
-  /*  content: "";*/
-  /*  position: fixed;*/
-  /*  width: 100%;*/
-  /*  top: 0;*/
-  /*  left: 0;*/
-  /*  height: 70px;*/
-  /*  background-color: #ffffff;*/
-  /*  z-index: 2;*/
-  /*}*/
-  .menu__list li{
-    margin: 0 0 30px 0;
-  }
-  .menu__list {
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
-  }
-  .menu__list li:last-child{
-    margin-bottom: 0;
-  }
-  .menu__link{
-    font-size: 26px;
-  }
-  .menu__icon._active{
-      position: absolute;
-      bottom: 20px;
-      left: 41%;
-  }
-  }
-@media (max-width: 655px) {
-    .menu__icon._active{
-        position: absolute;
-        bottom: 20px;
-        left: 39%;
-    }
-}
-@media (max-width: 570px) {
-    .menu__icon._active{
-        position: absolute;
-        bottom: 20px;
-        left: 40%;
-    }
-    .menu__icon{
-        column-gap: 10px;
-    }
-}
-@media (max-width: 428px) {
-    .menu__icon._active{
-        position: absolute;
-        bottom: 20px;
-        left: 40%;
-    }
-    .menu__icon{
-        column-gap: 0px;
-    }
-}
-@media (max-width: 320px) {
-    .menu__icon._active{
-        position: absolute;
-        bottom: 20px;
-        left: 35%;
-    }
-}
+ @media (max-width: 655px) {
+	.menu__icon._active{
+	  position: absolute;
+	  bottom: 20px;
+	  left: 39%;
+	}
+ }
+ @media (max-width: 570px) {
+	.menu__icon._active{
+	  position: absolute;
+	  bottom: 20px;
+	  left: 40%;
+	}
+	.menu__icon{
+	  column-gap: 10px;
+	}
+ }
+ @media (max-width: 428px) {
+	.menu__icon._active{
+	  position: absolute;
+	  bottom: 20px;
+	  left: 40%;
+	}
+	.menu__icon{
+	  column-gap: 0;
+	}
+	header .header__logo{
+	  left: 40%;
+	}
+ }
+ 
+ @media (max-width: 320px) {
+	.menu__icon._active{
+	  position: absolute;
+	  bottom: 20px;
+	  left: 35%;
+	}
+ }
 /*================ MAIN SECTION ================*/
 @media (max-width: 869px){
-    .main__container{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-}
-@media (max-width: 519px){
-    .main__text{
-        padding: 60px 0;
-    }
-    .main__text h1{
-        font-size: 48px;
-    }
-    .main__text p{
-        font-size: 20px;
-    }
-    .main__img img {
-        max-width: 90%;
-    }
-}
+	.main__container{
+	  flex-direction: column;
+	  justify-content: center;
+	  align-items: center;
+	}
+ }
+ @media (max-width: 519px){
+	.main__text{
+	  padding: 60px 0;
+	}
+	.main__text h1{
+	  font-size: 48px;
+	}
+	.main__text p{
+	  font-size: 20px;
+	}
+	.main__img img {
+	  max-width: 90%;
+	}
+ }
 /*================ SELLERS SECTION ================*/
 @media (max-width: 519px){
-    .sellers{
-        padding: 60px 0 60px 0;
-        background: #FFF;
-    }
-    .sellers .guide__container h2{
-        font-size: 30px;
-    }
-    .sellers .guide__container p{
-        font-size: 18px;
-    }
-    .guide__container{
-        margin-bottom: 60px;
-    }
-    .sellers h2{
-        font-size: 30px;
-
-    }
-}
+	.sellers{
+	  padding: 60px 0 60px 0;
+	}
+	.sellers .guide__container h2{
+	  font-size: 30px;
+	}
+	.sellers .guide__container p{
+	  font-size: 18px;
+	}
+	.guide__container{
+	  margin-bottom: 60px;
+	}
+	.sellers h2{
+	  font-size: 30px;
+ 
+	}
+ }
 /*================ DESCRIPTION SECTION ================*/
 @media (max-width: 869px){
-    .description__container{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-}
-@media (max-width: 519px){
-    .text_block h3{
-        font-size: 30px;
-        margin-bottom: 20px;
-    }
-    .text_block p{
-        font-size: 28px;
-        text-align: center;
-        padding-top: 50px;
-    }
-    .img_block{
-        margin-right: 0;
-    }
-    .culture .text_block{
-        padding-bottom: 15px;
-    }
-}
+	.description__container{
+	  flex-direction: column;
+	  justify-content: center;
+	  align-items: center;
+	}
+ }
+ @media (max-width: 519px){
+	.society {
+	  padding: 50px 0 40px 0;
+	}
+	.text_block{
+	  padding-top: 40px;
+	}
+	.text_block h3{
+	  font-size: 30px;
+	  margin-bottom: 20px;
+	}
+	.text_block p{
+	  font-size: 28px;
+	  text-align: center;
+	  padding-top: 50px;
+	}
+	.img_block{
+	  margin-right: 0;
+	}
+	.culture .text_block{
+	  padding-bottom: 15px;
+	}
+ }
 /*================ POINTS SECTION ================*/
 @media (max-width: 555px){
-    .points{
-        padding: 100px 0 50px 0;
-
-    }
-    .points__container h3{
-        font-size: 30px;
-    }
-    .points__flex{
-        padding-bottom: 88px;
-        gap: 88px 0;
-    }
-    .points .pointer{
-        font-size: 24px;
-    }
-}
+	.points{
+	  padding: 100px 0 50px 0;
+ 
+	}
+	.points__container h3{
+	  font-size: 30px;
+	}
+	.points__flex{
+	  padding-bottom: 88px;
+	  gap: 88px 0;
+	}
+	.points .pointer{
+	  font-size: 24px;
+	}
+ }
+ @media (max-width: 390px){
+	.points{
+	  padding: 80px 0 50px 0;
+	}
+	.points__container h3{
+	  font-size: 28px;
+	}
+ .points .pointer{
+	font-size: 18px;
+ }
+ .points .pointer:before{
+	width: 60px;
+	height: 60px;
+ }
+ }
 /*================ INTERVIEWS SECTION ================*/
 @media (max-width: 869px) {
-    .interviews__items {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .interviews {
-        padding: 30px 0 30px 0;
-    }
-
-    .interviews__item img {
-        margin-top: 20px;
-        margin-bottom: 20px;
-    }
-}
-    @media (max-width: 519px){
-        .interviews__item h4{
-            font-size: 18px;
-        }
-        .interviews__container h3{
-            font-size: 30px;
-            margin-bottom: 25px;
-        }
-        .interviews__item p{
-            font-size: 16px;
-            margin-bottom: 25px;
-        }
-        .interviews__item a{
-            font-size: 16px;
-        }
-    }
+	.interviews__items {
+	  flex-direction: column;
+	  justify-content: center;
+	  align-items: center;
+	}
+ 
+	.interviews {
+	  padding: 30px 0 30px 0;
+	}
+ 
+	.interviews__item img {
+	  margin-top: 20px;
+	  margin-bottom: 20px;
+	}
+ }
+ @media (max-width: 519px){
+	.interviews__item h4{
+	  font-size: 18px;
+	}
+	.interviews__container h3{
+	  font-size: 30px;
+	  margin-bottom: 25px;
+	}
+	.interviews__item p{
+	  font-size: 16px;
+	  margin-bottom: 25px;
+	}
+	.interviews__item a{
+	  font-size: 16px;
+	}
+ }
 /*================ FORM SECTION ================*/
-    @media (max-width: 519px){
-        .keep{
-            padding: 50px 0 50px 0;
-        }
-        .keep__container h3{
-            font-size: 30px;
-        }
-        .keep__container p{
-            font-size: 15px;
-        }
-        .keep__form input::placeholder{
-            font-size: 13px;
-        }
-    }
+@media (max-width: 519px){
+	.keep{
+	  padding: 50px 0 50px 0;
+	}
+	.keep__container h3{
+	  font-size: 30px;
+	}
+	.keep__container p{
+	  font-size: 15px;
+	}
+	.keep__form input::placeholder{
+	  font-size: 13px;
+	}
+ }
+ @media (max-width: 400px){
+	.keep__input_email input {
+	  max-width: 325px;
+	}
+	.keep__input_name input {
+	  width: 138px;
+	}
+ }
+ @media (max-width: 400px){
+	.keep__input_email input {
+	  max-width: 310px;
+	}
+ }
+ @media (max-width: 351px){
+	.keep__input_email input {
+	  max-width: 295px;
+	}
+ }
+ @media (max-width: 330px){
+	.keep__input_email input {
+	  max-width: 289px;
+	}
+	.keep__container{
+	  padding: 0 5px;
+	}
+ }
 /*================ FOOTER SECTION ================*/
-@media (max-width: 551px){
-    .footer__container {
-        padding: 40px 0px 16px 5px;
-    }
-    .footer__social{
-        gap: 10px;
-    }
-    .footer__about_list li{
-        font-size: 12px;
-        margin-right: 30px;
-        margin-bottom: 10px;
-    }
-    .footer__about_list li:nth-child(1){
-        margin-bottom: 18px;
-    }
-    .footer__about_contact li{
-        font-size: 12px;
-        margin-right: 30px;
-        margin-bottom: 10px;
-    }
-    .footer__about_contact li:nth-child(1){
-        margin-bottom: 18px;
-    }
-    .footer__year p{
-        font-size: 12px;
-    }
-}
+@media (max-width: 560px){
+	.footer__container {
+	  padding: 40px 0 16px 5px;
+	}
+	.footer__social{
+	  gap: 10px;
+	}
+	.footer__about_list li{
+	  font-size: 12px;
+	  margin-right: 30px;
+	  margin-bottom: 10px;
+	}
+	.footer__about_list li:nth-child(1){
+	  margin-bottom: 18px;
+	}
+	.footer__about_contact li{
+	  font-size: 12px;
+	  margin-right: 30px;
+	  margin-bottom: 10px;
+	}
+	.footer__about_contact li:nth-child(1){
+	  margin-bottom: 18px;
+	}
+	.footer__year p{
+	  font-size: 12px;
+	}
+ }
+ @media (max-width: 427px) {
+	.footer__social {
+	  flex-direction: column;
+	  justify-content: center;
+	  padding-left: 10px;
+	}
+ 
+	.footer__about_contact li {
+	  margin-right: 10px;
+	}
+	.footer__logo img {
+	  max-width: 80%;
+	}
+ }
