--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ header .header__logo{
 }
 .menu__link{
     color: #1C1B1B;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
@@ -90,7 +90,7 @@ header .header__logo{
 }
 .main__text h1{
     color: #000;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 60px;
     font-style: normal;
     font-weight: 700;
@@ -100,7 +100,7 @@ header .header__logo{
 }
 .main__text p{
     color: #000;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 24px;
     font-style: normal;
     font-weight: 400;
@@ -109,7 +109,7 @@ header .header__logo{
 }
 .main__text a{
     color: #FFF;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 17px;
     font-style: normal;
     font-weight: 400;
@@ -128,10 +128,7 @@ header .header__logo{
     box-shadow: inset 0 0 0 1px #ffffff;
 
 }
-.main__img{
-    /*max-width: 599px;*/
-    /*padding-top: 40px;*/
-}
+
 .main__img img{
     max-width: 100%;
     display: block;
@@ -147,7 +144,7 @@ header .header__logo{
 .sellers .guide__container h2{
     color: #000;
     text-align: center;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 36px;
     font-style: normal;
     font-weight: 700;
@@ -160,7 +157,7 @@ header .header__logo{
 .sellers .guide__container p{
     color: #000;
     text-align: center;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -175,7 +172,7 @@ header .header__logo{
 .sellers h2{
     color: #000;
     text-align: center;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 36px;
     font-style: normal;
     font-weight: 700;
@@ -200,7 +197,7 @@ header .header__logo{
 .thalby_guide h4{
     color: #000;
     text-align: center;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 17px;
     font-style: normal;
     font-weight: 700;
@@ -211,7 +208,7 @@ header .header__logo{
 .thalby_guide p{
     color: #000;
     text-align: center;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 17px;
     font-style: normal;
     font-weight: 400;
@@ -221,7 +218,7 @@ header .header__logo{
 .thalby_guide a{
     color: #000;
     text-align: center;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 17px;
     font-style: normal;
     font-weight: 700;
@@ -267,7 +264,7 @@ header .header__logo{
 }
 .text_block h3{
     color: #000;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 36px;
     font-style: normal;
     font-weight: 700;
@@ -276,7 +273,7 @@ header .header__logo{
 }
 .text_block p{
     color: #000;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 36px;
     font-style: normal;
     font-weight: 400;
@@ -285,7 +282,7 @@ header .header__logo{
 }
 .text_block a{
     color: #000;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 17px;
     font-style: normal;
     font-weight: 700;
@@ -315,13 +312,13 @@ header .header__logo{
 .points__container h3{
     color: #000;
     text-align: center;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 36px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     margin-bottom: 69px;
-    text-shadow: 0px 3px 2px #c9c9c9;
+    text-shadow: 0 3px 2px #c9c9c9;
 }
 .points__flex{
     display: flex;
@@ -335,18 +332,18 @@ header .header__logo{
     width: 33%;
     color: #000;
     text-align: center;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 30px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    text-shadow: 0px 3px 2px #c9c9c9;
+    text-shadow: 0 3px 2px #c9c9c9;
 
 }
 .points .pointer:before{
     content: "";
     display: block;
-    margin: auto;
+    /*margin: auto;*/
     width: 70px;
     height: 70px;
     border-radius: 50%;
@@ -380,13 +377,13 @@ header .header__logo{
 .interviews__container h3{
     color: #000;
     text-align: center;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 36px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
     margin-bottom: 102px;
-    text-shadow: 0px 3px 2px #c9c9c9;
+    text-shadow: 0 3px 2px #c9c9c9;
 }
 .interviews__items{
     display: flex;
@@ -401,7 +398,7 @@ header .header__logo{
 .interviews__item h4{
     color: #000;
     text-align: center;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 22px;
     font-style: normal;
     font-weight: 700;
@@ -412,7 +409,7 @@ header .header__logo{
 .interviews__item p{
     color: #000;
     text-align: center;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -422,7 +419,7 @@ header .header__logo{
 .interviews__item a{
     color: #000;
     text-align: center;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 700;
@@ -444,24 +441,24 @@ header .header__logo{
 .keep__container h3{
     color: #000;
     text-align: center;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 36px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
     margin-bottom: 9px;
-    text-shadow: 0px 3px 2px #c9c9c9;
+    text-shadow: 0 3px 2px #c9c9c9;
 }
 .keep__container p{
     color: #000;
     text-align: center;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 17px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
     margin-bottom: 26px;
-    text-shadow: 0px 3px 2px #c9c9c9;
+    text-shadow: 0 3px 2px #c9c9c9;
 }
 .keep__form{
     max-width: 366px;
@@ -477,7 +474,7 @@ header .header__logo{
 .keep__form input::placeholder{
     color: #A0A0A0;
     text-align: center;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -510,7 +507,7 @@ header .header__logo{
     background: #000;
     color: #FFF;
     text-align: center;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -533,9 +530,8 @@ footer{
 }
 .footer__logo{
     max-width: 129px;
-    height: 41px;
 }
-.footer__logo imd{
+.footer__logo img{
     max-width: 100%;
     display: block;
 }
@@ -557,7 +553,7 @@ footer{
 }
 .footer__about_list li{
     color: #FFF;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -568,7 +564,7 @@ footer{
 .footer__about_list li:nth-child(1){
     margin-bottom: 36px;
     color: #FFF;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -586,7 +582,7 @@ footer{
 }
 .footer__about_contact li{
     color: #FFF;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -597,7 +593,7 @@ footer{
 .footer__about_contact li:nth-child(1){
     margin-bottom: 36px;
     color: #FFF;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -609,7 +605,7 @@ footer{
 .footer__year p{
     color: #FFF;
     text-align: center;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
